initalized simple sms integration
