# app/Models/API/MobileCarrier.php
@@ -3,6 +3,7 @@
 namespace App\Http\Models\API;
 
 use Illuminate\Database\Eloquent\Relations\HasMany;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 use Illuminate\Database\Eloquent\SoftDeletes;
 
 class MobileCarrier extends BaseApiModel
@@ -10,7 +11,7 @@ class MobileCarrier extends BaseApiModel
     use SoftDeletes;
     protected $table = 'mobile_carriers';
     protected $dates = ['deleted_at'];
-    protected $fillable = ['code', 'label'];
+    protected $fillable = ['country_id', 'code', 'label'];
 
 
     /**
@@ -19,5 +20,13 @@ class MobileCarrier extends BaseApiModel
     public function mobilePhones()
     {
         return $this->hasMany(MobilePhone::class);
+    }
+
+    /**
+     * @return BelongsTo
+     */
+    public function country()
+    {
+        return $this->belongsTo(Country::class);
     }
 }
